--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1sxHzLb0RQ6iy9mdQ3yt9MM8uUE86O9s&ehbc=2E312F&noprof=1" width="520" height="360"></iframe>
   </body>
 </html>
