Create comment for vectera keys

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+VECTERA
+Customer ID: 2411510095
+Corpus Key: Verdant
+API Key: zqt_j7y5T2UMh2b8UjHbL4e9gGjg7imUwv6BfiTQBQ
+//-->
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,6 +16,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1sxHzLb0RQ6iy9mdQ3yt9MM8uUE86O9s&ehbc=2E312F&noprof=1" width="520" height="360"></iframe>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1sxHzLb0RQ6iy9mdQ3yt9MM8uUE86O9s&ehbc=2E312F&noprof=1" width="360" height="520"></iframe>
   </body>
 </html>
